--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap");
 body {
   margin: 0;
@@ -5,4 +9,32 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: linear-gradient(to left, rgb(27 20 41), rgb(20 15 35));
+}
+
+
+@keyframes animatedGradient {
+  0% {
+      background-position: 200% 0%;
+  }
+  100% {
+      background-position: -200% 0%;
+  }
+}
+
+.animated-gradient-light-bgs {
+  background-image: linear-gradient(90deg, #7c3aed,#7c3aed, #7c3aed, #ebeb25, #904ff6, #7c3aed,#7c3aed);
+  background-size: 200% 100%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  animation: animatedGradient 3s linear infinite;
+}
+
+.animated-gradient-dark-bgs {
+  background-image: linear-gradient(90deg,#fff, #fff, #fff, #ebeb25, #fff, #fff, #fff);
+  background-size: 200% 100%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  animation: animatedGradient 3s linear infinite;
 }
